--- a/capstone1/style.css
+++ b/capstone1/style.css
@@ -33,7 +33,7 @@ footer {
 }
 
 body {
-    background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url(./images/background-image.jpg);
+    background-image: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url(./images/background1.jpg);
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
