--- a/capstone1/style.css
+++ b/capstone1/style.css
@@ -15,7 +15,7 @@ footer {
 	background-color: #0F0101;
 }
 
-.nav-link {
+.nav-link, .card-title, .card-text {
 	color: white;
 }
 
@@ -43,7 +43,7 @@ body {
 	background-color: #0F0101;
 }
 
-#projects {
+.card {
 	background-color: rgba(0, 0, 0, 0.7);
 }
 
